--- a/index.html
+++ b/index.html
@@ -869,6 +869,10 @@
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;同样的，单亲母亲的社交情况也不容乐观。
                 </p>
+                <div class="chart-center" id="social"></div>
+                <p class="small m-auto line-height-3 text-center"> <!-- 这是数据注释 -->
+                    数据来源：陈雅馨. (2023). 在线社会支持对单亲母亲群体身份认同的影响研究.
+                </p>
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;根据《在线社会支持对单亲母亲群体身份认同的影响研究》，在201位受访者中，共有148位妈妈加入过单亲母亲社群，微信群、QQ群、带有#单亲母亲#标签的话题讨论是她们主要参与的社群类型。53位妈妈未参加过单亲母亲社群，原因包括“没资源或者渠道接触”（49.1%）、“没有时间社交”（43.4%）和“自己可以应付生活与工作，没有这种需求”（34%）。
                 </p>
@@ -889,7 +893,7 @@
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;可是，单亲母亲似乎自古便被贴上各种污名化的标签，“二手货”“没人要”“带着小累赘”。
                 </p>
-                <div class="row justify-content-center" style="padding-top: 20px;">
+                <div class="row justify-content-center" style="padding-top: 20px;">t
                     <div class="col-md-6 col-lg-8 m-b-50">
                         <img src="img/mf-compare.png"> <!-- 这是一张图片 -->
                     </div>
@@ -961,7 +965,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;为什么要更关注单亲母亲群体？
                 </p>
                 <p class="m-auto line-height-3">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;可能在我们的认知中，单亲家庭普遍面临类似的挑战，例如抚养孩子的责任和心理压力。但是分类讨论单亲母亲和单亲爸爸还是非常有必要的。
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;可能在我们的认知中，单亲家庭普遍面临类似的挑战，例如抚养孩子的责任和心理压力。但是分类讨论单亲母亲和单亲父亲还是非常有必要的。
                 </p>
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;由于可见的社会背景，包括性别间的社会经济差异，以及在抚养孩子方面，单亲母亲往往承担更多的责任。而尽管已有研究指出了男性和女性之间，尤其是女性在怀孕后的收入差距，但这些研究大多集中在一般家庭中，对单亲家庭的收入差距和贫困状况了解不足。
@@ -1011,6 +1015,9 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这意味着，除了城市中的单亲母亲外，还有一大部分居住在乡村的单亲母亲同样值得我们关注。
                 </p>
                 <div id="群体差异-end"></div>
+                <div class="sticker-container">
+                    <img src="img/mom-cost.png"> <!-- 这是一张图片 -->
+                </div>
                 <div class="comic-container" id="收入水平-start"> <!-- 这是小标题 -->
                     <div class="dialogue comic-title">
                         <p class="m-auto little-title">单亲母亲的收入水平</p>
@@ -1058,7 +1065,7 @@
                 <div class="chart-center" id="income-rural"></div>
                 <p class="small m-auto line-height-3 text-center"> <!-- 这是数据注释 -->
                     数据来源：北大家庭跟踪调查（2020），筛选出单亲母亲样本N=201，有效数据N=133。
-                </p> 
+                </p>
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;而在城市与农村间的对比上，城市和农村单亲母亲的收入存在明显差异。城市单亲母亲的收入水平明显高于农村，部分个案的收入超过了10万元。相比之下，农村单亲母亲的收入主要集中在较低的收入区间。总结来看，城市单亲妈妈的收入分布更为广泛和多样，高收入人群比例较大，而农村单亲妈妈的收入主要集中在较低收入区间，高收入人群非常少。
                 </p>
@@ -1486,5 +1493,6 @@
 <script src="data/marital-status.js"></script>
 <script src="data/raise-num.js"></script>
 <script src="data/child-birth-year.js"></script>
+<script src="data/social.js"></script>
 
 </html>
