modified:   index.html

--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                 数据来源：北大家庭跟踪调查（2020），筛选出单亲母亲样本N=411，统计一胎出生时间样本N=407。
             </p>
             <p class="m-auto line-height-3">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;而从单亲母亲一胎孩子出生时间来看。在1990年代至2010年代，随着中国经济的快速发展，女性的社会地位和经济独立性显著提高，以及改革开放以来离婚率的上升，这使得单亲妈妈在独自抚养方面有更多的自主选择权。然而，近年来，经济增速放缓，生活成本上升，尤其是育儿和教育费用增加，叠加单亲母亲年龄等因素，导致2015-2020年出生比例下降。
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;而从单亲母亲一胎孩子出生时间来看，在1990年代至2010年代，随着中国经济的快速发展，女性的社会地位和经济独立性显著提高，以及改革开放以来离婚率的上升，这使得单亲妈妈在独自抚养方面有更多的自主选择权。然而，近年来，经济增速放缓，生活成本上升，尤其是育儿和教育费用增加，叠加单亲母亲年龄等因素，导致2015-2020年出生比例下降。
             </p>
             <p class="m-auto line-height-3">
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;同时，由于近年总体资料的缺失，我们对于近年来的单亲家庭成因只能从部分个体研究中窥见一斑。
