modified:   assets/js/main.js 	modified:   assets/js/main.min.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 </div>
             </div>
         </div>
-        <div class="container col-12 section-title text-start" style="padding-top: 0px;" data-aos="fade-up"
+        <div class="container col-12 section-title text-start" style="padding-top: 0px;" data-aos="fade-up" data-aos-duration="1100"
             class="d-flex justify-content-center">
             <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
             <p class="m-auto line-height-3 font-songti">
@@ -1384,7 +1384,7 @@
                             《“快来抱抱她”——不被看见的单亲母亲群体困境》
                         </p>
                         <span class="d-flex justify-content-center split"></span>
-                        <p class="m-auto line-height-3">小组成员：张思锐 谢建双 张鹤馨 韩子涵</p>
+                        <p class="m-auto line-height-3">小组成员：张思锐 谢建双 张鹤馨</p>
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3 small">制作分工</p>
                         <p class="m-auto line-height-3">文献调研：谢建双 张思锐 张鹤馨</p>
@@ -1394,13 +1394,6 @@
                         <p class="m-auto line-height-3">文稿写作：张思锐 谢建双</p>
                         <p class="m-auto line-height-3">插图绘制：张鹤馨</p>
                         <p class="m-auto line-height-3">网站制作：谢建双</p>
-                        <span class="d-flex justify-content-center split"></span>
-                        <p class="m-auto line-height-3 small">以下成员对本文亦有贡献</p>
-                        <p class="m-auto line-height-3">创意监理：韩子涵</p>
-                        <p class="m-auto line-height-3 small">（文案润色与部分故事交互，第四章“心理健康”相关深访摘抄，部分其他事项等）</p>
-                        <p class="m-auto line-height-3 small"
-                            style="color: #fefff0 !important; margin-bottom: -60px !important;">
-                            （激情落泪奖：曾创下最后两天才在小组成员催促下打开小组文档的壮举）</p>
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3">数据来源：</p>
                         <p class="small m-auto line-height-3 text-start col-lg-3">
