modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1384,6 +1384,14 @@
                             《“快来抱抱她”——不被看见的单亲母亲群体困境》
                         </p>
                         <span class="d-flex justify-content-center split"></span>
+                        <p class="small m-auto line-height-3 text-center">草稿最近更新日期</p>
+                        <p class="small m-auto line-height-3 text-center">
+                        2024-07-02
+                        </p>
+                        <p class="small m-auto line-height-3 text-center">
+                        （不确定服务器是否同步，请根据时间手动判断）
+                        </p>
+                        <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3">小组成员：张思锐 谢建双 张鹤馨</p>
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3 small">制作分工</p>
