modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1390,7 +1390,7 @@
                         </p>
                         <p class="small m-auto line-height-3 text-center">最近修改内容</p>
                         <p class="small m-auto line-height-3 text-center">
-                        2部分有问题的JS修改
+                        修改开头部分有问题的JS
                         </p>
                         <p class="small m-auto line-height-3 text-center">
                         （不确定服务器是否同步，请根据时间手动判断）
