--- a/index.html
+++ b/index.html
@@ -1384,19 +1384,19 @@
                             《“快来抱抱她”——不被看见的单亲母亲群体困境》
                         </p>
                         <span class="d-flex justify-content-center split"></span>
-                        <p class="small m-auto line-height-3 text-center">草稿最近更新日期</p>
+                        <p class="small m-auto text-center">草稿最近更新日期</p>
                         <p class="small m-auto line-height-3 text-center">
                         2024-07-02
                         </p>
-                        <p class="small m-auto line-height-3 text-center">最近修改内容</p>
+                        <p class="small m-auto text-center">最近修改内容</p>
                         <p class="small m-auto line-height-3 text-center">
                         修改开头部分有问题的JS
                         </p>
-                        <p class="small m-auto line-height-3 text-center">TODO LIST</p>
+                        <p class="small m-auto text-center">TODO LIST</p>
                         <p class="small m-auto line-height-3 text-center">
-                        判决、社媒
+                        判决、社媒、典型案例
                         </p>
-                        <p class="small m-auto line-height-3 text-center">
+                        <p class="small m-auto text-center">
                         （不确定服务器是否同步，请根据时间手动判断）
                         </p>
                         <span class="d-flex justify-content-center split"></span>
