modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1401,6 +1401,8 @@
                         </p>
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3">小组成员：张思锐 谢建双 张鹤馨</p>
+                        <p class="small m-auto text-center">
+                            （课程作业小组成员：张思锐 谢建双 张鹤馨 韩子涵）
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3 small">制作分工</p>
                         <p class="m-auto line-height-3">文献调研：谢建双 张思锐 张鹤馨</p>
