modified:   index.html 	modified:   style.css 	modified:   style_preset.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
     <!-- 图标 -->
     <link rel="shortcut icon" href="assets/images/logo.png">
-
+    <!-- 字体 -->
+    <link href="
+    https://cdn.jsdelivr.net/npm/@tslsmart/font-puhuiti@1.0.0/index.min.css
+    " rel="stylesheet">
     <!-- 添加图标库 -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
