deleted:    avatar_test.html 	deleted:    img/1.png 	new file:   img/1.webp 	deleted:    img/2.png 	new file:   img/2.webp 	deleted:    img/3.png 	new file:   img/3.webp 	deleted:    img/4.png 	new file:   img/4.webp 	deleted:    "img/DALL\302\267E 2024-05-13 09.15.39 - A wide format illustration depicting the journey of motherhood, showing a mother with her child at various stages of growth against a solid pink backg.webp" 	deleted:    img/avatar1.png 	deleted:    img/avatar2.png 	deleted:    img/avatar3.png 	deleted:    img/avatar4.png 	deleted:    img/avatar5.png 	deleted:    img/avatar6.png 	deleted:    img/detail1.jpg 	deleted:    img/detail2.jpg 	deleted:    img/detail3.jpg 	deleted:    img/portrait1.png 	deleted:    img/portrait2.png 	deleted:    img/portrait3.png 	deleted:    img/q1.png 	deleted:    img/totheend.png 	new file:   img/totheend.webp 	modified:   index.html 	modified:   main_js_for_test.js 	modified:   style_for_test.css 	deleted:    "\346\274\253\347\224\273/\345\221\212\345\210\253.png" 	new file:   "\346\274\253\347\224\273/\345\221\212\345\210\253.webp" 	deleted:    "\346\274\253\347\224\273/\345\230\230\344\273\226\345\234\250\347\235\241\350\247\211.png" 	new file:   "\346\274\253\347\224\273/\345\230\230\344\273\226\345\234\250\347\235\241\350\247\211.webp" 	deleted:    "\346\274\253\347\224\273/\345\257\271\350\257\235/1.png" 	new file:   "\346\274\253\347\224\273/\345\257\271\350\257\235/1.webp" 	deleted:    "\346\274\253\347\224\273/\345\257\271\350\257\235/2.png" 	new file:   "\346\274\253\347\224\273/\345\257\271\350\257\235/2.webp" 	deleted:    "\346\274\253\347\224\273/\345\257\271\350\257\235/3.png" 	new file:   "\346\274\253\347\224\273/\345\257\271\350\257\235/3.webp" 	deleted:    "\346\274\253\347\224\273/\345\257\271\350\257\235/4.png" 	new file:   "\346\274\253\347\224\273/\345\257\271\350\257\235/4.webp" 	deleted:    "\346\274\253\347\224\273/\345\257\271\350\257\235/5.png" 	new file:   "\346\274\253\347\224\273/\345\257\271

--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                 </div>
             </div>
             <div class="image-container">
-                <img id="scroll-image" src="img/1.png" alt="Image">
+                <img id="scroll-image" src="img/1.webp" alt="Image">
             </div>
         </div>
         <div id="chapter-1-bottom"></div> <!-- 底部 -->
@@ -796,7 +796,7 @@
                 </p>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-12 m-b-50">
-                        <img src="漫画/展示奖杯.png"> <!-- 这是一张图片 -->
+                        <img src="漫画/展示奖杯.webp"> <!-- 这是一张图片 -->
                     </div>
                 </div>
                 <div id="被忽视的她们-end"></div>
@@ -807,7 +807,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-10 m-b-50">
-                        <img src="漫画/对话/1.png"> <!-- 这是一张图片 -->
+                        <img src="漫画/对话/1.webp"> <!-- 这是一张图片 -->
                     </div>
                 </div>
                 <p class="m-auto line-height-3">
@@ -842,7 +842,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-10 m-b-50">
-                        <img src="漫画/对话/3.png"> <!-- 这是一张图片 -->
+                        <img src="漫画/对话/3.webp"> <!-- 这是一张图片 -->
                     </div>
                 </div>
                 <p class="m-auto line-height-3">
@@ -883,7 +883,7 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-10 m-b-50">
-                        <img src="漫画/对话/2.png"> <!-- 这是一张图片 -->
+                        <img src="漫画/对话/2.webp"> <!-- 这是一张图片 -->
                     </div>
                 </div>
                 <p class="m-auto line-height-3">
@@ -948,7 +948,7 @@
                 </p>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-12 m-b-50">
-                        <img src="漫画/嘘他在睡觉.png"> <!-- 这是一张图片 -->
+                        <img src="漫画/嘘他在睡觉.webp"> <!-- 这是一张图片 -->
                     </div>
                 </div>
                 <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
@@ -1350,12 +1350,12 @@
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-10" style="margin-top: -320px; margin-bottom: -160px; z-index: 100;">
-                        <img src="漫画/对话/9.png"> <!-- 这是一张图片 -->
+                        <img src="漫画/对话/9.webp"> <!-- 这是一张图片 -->
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-8 m-b-50">
-                        <img src="漫画/告别.png"> <!-- 这是一张图片 -->
+                        <img src="漫画/告别.webp"> <!-- 这是一张图片 -->
                     </div>
                 </div>
                 <p class="m-auto line-height-3 font-songti-large text-center">
