modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,8 @@
                         <p class="small m-auto line-height-3 text-start col-lg-3">
                             1. 北大家庭跟踪调查2020<br>
                             2. 十城市单亲母亲生活状况及需求调研报告<br>
-                            3. EPS数据平台中国民政数据库
+                            3. EPS数据平台中国民政数据库<br>
+                            4. 数据爬取部分：<br>&nbsp;&nbsp;&nbsp;&nbsp;微博评论的爬取时间段为2022年1月1日至2024年6月1日，共计84966条。小红书的爬取时间段为2024年4月1日至6月1日的贴文含评论，共计1334条。
                         </p>
                         <span class="d-flex justify-content-center split"></span>
                         <p class="m-auto line-height-3">资料引用：</p>
