modified:   index.html

--- a/index.html
+++ b/index.html
@@ -812,6 +812,20 @@
                     </div>
                 </div>
                 <div id="被忽视的她们-end"></div>
+                <div class="comic-container" id="当谈论单亲母亲，我们在谈论什么？-start" replace="当谈论单亲母亲，[br]我们在谈论什么？"> <!-- 这是小标题 -->
+                    <div class="dialogue comic-title">
+                        <p class="m-auto little-title">当谈论单亲母亲，我们在谈论什么？</p>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-8">
+                        <img src="img/wordcloud.png"> <!-- 这是一张图片 -->
+                    </div>
+                </div>
+                <p class="small m-auto line-height-3 text-center"> <!-- 这是数据注释 -->
+                    数据来源：微博评论，爬取时间段为2022年1月1日至2024年6月1日
+                </p>
+                <div id="当谈论单亲母亲，我们在谈论什么？-end"></div>
                 <div class="comic-container" id="被牺牲的单身母亲-start"> <!-- 这是小标题 -->
                     <div class="dialogue comic-title">
                         <p class="m-auto little-title">“被牺牲”的单亲母亲</p>
@@ -844,18 +858,13 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;一份来自暨南大学人文学院的研究将母亲牺牲文化定义为是指母亲为了孩子的利益和成长，牺牲自己的需求和兴趣。具体而言，这种现象在中国的家庭和社会中广泛存在，并且对于单亲母亲而言，社会上对于其需要“牺牲自我利益”而照顾子女的观念更加突出。
                 </p>
                 <p class="m-auto line-height-3">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在社会的大语境下，人们普遍要求母亲为了孩子的利益而放弃自己的需求和兴趣，将子女的成长视为比自身需求更重要的责任。离婚在一些家庭中仍被视为一种耻辱，单亲母亲不仅在社会上受到排斥，有时在家庭内部也会被排斥。中国的家庭主义文化强调家庭团结和家庭荣誉，这种文化背景下，女性在家庭中的地位相对较低，常常需要遵循服从和牺牲的文化规范。女性在教育、人力资本和社会资本方面的资源较少，限制了她们的发展前景。
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在广泛的社会文化背景下，人们普遍期望母亲能够将孩子的需求置于自身之上，将子女的成长视为高于一切的责任。在一些观念中，离婚仍被视为家庭的污点，单亲母亲因此在社会乃至家庭内部都可能遭受排斥。
                 </p>
                 <p class="m-auto line-height-3">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在互联网上，并不缺乏这样的声音。
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;单亲母亲在社会文化的影响下，常常被期望承担更多的家庭责任，并且社会普遍认为她们应该将个人利益放在次要位置，首要考虑孩子的需求。相关研究表明，这种强调牺牲的文化导致单亲母亲在身份认同上更倾向于“自我牺牲”的母亲角色，而非独立自主的个体。单亲母亲在履行母亲角色时，常常将个人价值与母亲身份紧密相连。
                 </p>
-                <div class="row justify-content-center">
-                    <div class="col-md-6 col-lg-8">
-                        <img src="img/wordcloud.png"> <!-- 这是一张图片 -->
-                    </div>
-                </div>
-                <p class="small m-auto line-height-3 text-center"> <!-- 这是数据注释 -->
-                    数据来源：微博评论，爬取时间段为2022年1月1日至2024年6月1日
+                <p class="m-auto line-height-3">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在这样的社会文化压力下，单亲母亲不仅要应对日常生活的挑战，还需不断与外界的偏见和误解抗争。
                 </p>
                 <div id="被牺牲的单身母亲-end"></div>
                 <div class="comic-container" id="社会距离-start" replace="成为单亲母亲后，[br]她们和社会有了距离"> <!-- 这是小标题 -->
@@ -889,6 +898,9 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;基于《十城市单亲母亲生活状况及需求调研报告》，超七成的单亲母亲在离婚后没有情感生活，有过1-2次情感交往经验的只有不到三成。并且，53.1%的单亲母亲在婚恋、工作等诸多方面觉察到来自他人异样的目光甚至不友好态度。
                 </p>
                 <p class="m-auto line-height-3">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这种社会偏见根植于对单亲母亲角色的误解和刻板印象。社会往往将单亲母亲视为“问题”的根源，或者对她们建立新感情关系的能力持怀疑态度，这使得她们在新的机遇面前更加犹豫不决。
+                </p>
+                <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;同样的，单亲母亲的社交情况也不容乐观。
                 </p>
                 <div class="chart-center" id="social"></div>
@@ -900,6 +912,9 @@
                 </p>
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;受访的单亲母亲中，“孩子学习、玩耍等与孩子有关的晒娃分享”、“聚会、旅游、逛街等日常活动分享”是她们在社交平台上最常更新的内容，仅有10.4%的受访者会将“自拍”发到社交平台中。
+                </p>
+                <p class="m-auto line-height-3">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;未参与单亲母亲社群的受访者中，许多因缺乏资源或渠道以及时间紧张等原因未能加入。这一现象进一步揭示出，在生活与工作的双重压力下，单亲母亲往往优先考虑孩子和家庭，将个人需求置于次要地位。同时也反映了社会支持与接触渠道的缺乏，使她们在平衡社交与家庭责任之间面临重重困难。
                 </p>
                 <div id="社会距离-end"></div>
                 <div class="comic-container" id="污名化-start"> <!-- 这是小标题 -->
@@ -916,9 +931,9 @@
                     （以上对话摘抄自与单亲母亲的深访）
                 </p>
                 <p class="m-auto line-height-3">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;可是，单亲母亲似乎自古便被贴上各种污名化的标签，“二手货”“没人要”“带着小累赘”。
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;可是，单亲母亲似乎自古便被贴上各种污名化的标签，“二手货”“没人要”“带着小累赘”。对于单亲母亲而言，贴上这些标签的社会无疑在无形中筑起了一道道围墙，使她们在心理上更加孤立无助。
                 </p>
-                <div class="row justify-content-center" style="padding-top: 20px;">t
+                <div class="row justify-content-center" style="padding-top: 20px;">
                     <div class="col-md-6 col-lg-8 m-b-50">
                         <img src="img/mf-compare.png"> <!-- 这是一张图片 -->
                     </div>
@@ -927,6 +942,9 @@
                     数据来源：中国婚姻家庭研究会,中国妇女发展基金会. (2019). 十城市单亲母亲生活状况及需求调研报告.
                 </p>
                 <div id="污名化-end"></div>
+                <p class="m-auto line-height-3">
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;单亲母亲在日常生活中更容易感受到社会的敌意。调查数据显示，64.6%的单亲母亲感受到来自身边人的不友好言论，53.1%的人在婚恋市场中感到被排挤，而38.5%的单亲母亲在工作中经历过降职或其他形式的就业歧视。总体而言，单亲母亲在遭遇不友好言论和就业歧视等方面的问题比例远超过单亲父亲所面临的类似困境。
+                </p>
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;没有人试图想过，“她”不一定是牺牲者，女性为了子女不一定需要牺牲自我；“她”也不一定是坚强者，面临着重重压力，不能把她们独自抚养的勇气视作自讨活该的奉献；“她”是单身母亲，也是女孩，也是员工，与千千万万的其他人拥有平等的灵魂，不应该被污名化。
                 </p>
@@ -997,7 +1015,7 @@
                 </p>
                 <span class="d-flex justify-content-center split"></span> <!-- 这是分割线 -->
                 <p class="m-auto line-height-3">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;国外针对这一方面已有相关研究，基于2020年美国的一篇研究表明，单亲母亲家庭的贫困率和收入不平等程度要显著高于单亲父亲家庭。
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;国外针对这一方面已有相关研究。基于2020年美国的一篇研究表明，单亲母亲家庭的贫困率和收入不平等程度要显著高于单亲父亲家庭。
                 </p>
                 <div class="row justify-content-center">
                     <div class="col-md-6 col-lg-8 m-b-50">
