new file:   img/supports.webp 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1419,14 +1419,11 @@
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1996年，我国第一家民间妇女公益组织——北京红枫心理咨询中心成立。1998年，红枫在热线咨询中最早发现了单亲母亲问题，于同年成立了关于单亲家庭的重要公益品牌项目“方舟家庭中心”。其主要以线上咨询热线、线下培训社区工作者并辐射北京单亲家庭工作坊相结合的服务模式。但这种传统的公益运营模式具有很强的地域限制，而且其传播方式不利于实现大规模群体性传播，难以在短时间内解决单亲母亲的实际困难。
                 </p>
-                <div class="row justify-content-center" style="padding-top: 20px;">
+                <div class="row justify-content-center m-b-50" style="padding-top: 20px;">
                     <div class="col-md-6 col-lg-8">
-                        <img src="img/new-media.webp"> <!-- 这是一张图片 -->
+                        <img src="img/supports.webp"> <!-- 这是一张图片 -->
                     </div>
                 </div>
-                <p class="small m-auto line-height-3 text-center m-b-50"> <!-- 这是数据注释 -->
-                    （涉及单亲母亲的相关影视剧照）
-                </p>
                 <p class="m-auto line-height-3">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;媒介技术的进步不仅赋予了女性更多的话语权与发声空间，而且为公益组织触达单亲母亲群体并开展服务工作带来了新的契机。
                 </p>
